--- a/api.css
+++ b/api.css
@@ -9,7 +9,19 @@ scroll-behavior: var(--scroll-style);
 	}
 }
 
-body {font-family: var(--font); background: var(--main-color); color: var(--font-color); text-transform: var(--text-case-filter); margin: var(--page-margin)}
+button {border-radius: 124567890px; background: var(--accent-color); border: none; color: var(--font-color-alternate); padding: 10px 50px; font-family: var(--font); font-weight: bold;}
+
+button:active {
+	-webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+}
+
+body {font-family: var(--font); background: var(--main-color); color: var(--font-color); text-transform: var(--text-case-filter); margin: var(--page-margin);}
+
+	body > *, .navbar li a {
+ 	transition:all 0.3s ease !important;
+}
 
 a {text-decoration: none; color: var(--accent-color);}
 
@@ -27,6 +39,8 @@ a {text-decoration: none; color: var(--accent-color);}
   		overflow: hidden;
   		background-color: none;
 		position: sticky;
+		top: 0;
+		background: var(--main-color);
   	}
 
 	.navbar li {
@@ -43,16 +57,17 @@ a {text-decoration: none; color: var(--accent-color);}
   		border-radius: 12px;
 		cursor: pointer;
 	}
-
-	.navbar li a:hover:not(#active) {
+.navbar li a:hover {
   		background-color: var(--accent-color);
-		color: var(--font-color-alternate);
+		color: var(--font-color-alternate)
 	}
 
 	.navbar #active {
   		background-color: var(--accent-color);
 		color: var(--font-color-alternate)
 	}
+
+.navbar 
 .shadowed {
 	box-shadow: 5px 10px 8px lightgrey; 
 }
