--- a/api.css
+++ b/api.css
@@ -12,7 +12,7 @@ scroll-behavior: var(--scroll-style);
 button {border-radius: 124567890px; background: var(--accent-color); border: none; color: var(--font-color-alternate); padding: 10px 50px; font-family: var(--font); font-weight: bold;}
 
 button:active {
-	-webkit-transform: scale(0.8);
+    -webkit-transform: scale(0.8);
     -ms-transform: scale(0.8);
     transform: scale(0.8);
 }
@@ -24,6 +24,12 @@ body {font-family: var(--font); background: var(--main-color); color: var(--font
 }
 
 a {text-decoration: none; color: var(--accent-color);}
+
+a:active {
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    transform: scale(0.8);
+}
 
 	img.emoji {
    		height: 1em;
@@ -56,11 +62,13 @@ a {text-decoration: none; color: var(--accent-color);}
   		text-decoration: none;
   		border-radius: 12px;
 		cursor: pointer;
+		user-select: none;
 	}
+
 .navbar li a:hover {
   		background-color: var(--accent-color);
 		color: var(--font-color-alternate)
-	}
+}
 
 	.navbar #active {
   		background-color: var(--accent-color);
