--- a/api.css
+++ b/api.css
@@ -12,7 +12,7 @@ scroll-behavior: var(--scroll-style);
 button {border-radius: 124567890px; background: var(--accent-color); border: none; color: var(--font-color-alternate); padding: 10px 50px; font-family: var(--font); font-weight: bold;}
 
 button:active {
-    -webkit-transform: scale(0.8);
+	-webkit-transform: scale(0.8);
     -ms-transform: scale(0.8);
     transform: scale(0.8);
 }
@@ -25,8 +25,8 @@ body {font-family: var(--font); background: var(--main-color); color: var(--font
 
 a {text-decoration: none; color: var(--accent-color);}
 
-a:active {
-    -webkit-transform: scale(0.8);
+.navbar li a:active:not(#active) {
+	-webkit-transform: scale(0.8);
     -ms-transform: scale(0.8);
     transform: scale(0.8);
 }
@@ -44,10 +44,13 @@ a:active {
   		padding: 0;
   		overflow: hidden;
   		background-color: none;
-		position: sticky;
-		top: 0;
 		background: var(--main-color);
   	}
+	
+	ul.navbar.sticky {
+		position: sticky;
+		top: 0;
+}
 
 	.navbar li {
   		float: left;
@@ -65,17 +68,18 @@ a:active {
 		user-select: none;
 	}
 
-.navbar li a:hover {
+.navbar li a:hover:not(#active) {
   		background-color: var(--accent-color);
-		color: var(--font-color-alternate)
+		color: var(--font-color-alternate);
+		box-shadow:0 0 5px var(--accent-color);
 }
 
 	.navbar #active {
   		background-color: var(--accent-color);
-		color: var(--font-color-alternate)
+		color: var(--font-color-alternate);
+		box-shadow:0 0 5px var(--accent-color);
 	}
 
-.navbar 
 .shadowed {
 	box-shadow: 5px 10px 8px lightgrey; 
 }
