--- a/api.css
+++ b/api.css
@@ -1,4 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Baloo+2&family=Baloo+Bhai+2&family=Baloo+Bhaina+2&family=Baloo+Chettan+2&family=Baloo+Da+2&family=Baloo+Paaji+2&family=Baloo+Tamma+2&family=Baloo+Tammudu+2&family=Baloo+Thambi+2&Work+Sans&family=Open+Sans&family=Montserrat&family=Noto+Sans&family=Neucha&family=Source+Code+Pro&family=Roboto+Mono&family=Amatic+SC&family=Roboto&family=Inter&family=Roboto+Slab&family=Roboto+Condensed&family=Raleway&family=Merriweather&family=Ubuntu&family=Ubuntu+Condensed&family=Ubuntu+Mono&family=Quicksand&family=Space+Mono&family=DM+Mono&family=DM+Sans&family=DM+Serif+Text&family=DM+Serif+Display&family=Work+Sans&family=Titillium+Web&family=Lobster&family=Comfortaa&family=Staatliches&family=Pacifico&family=Permanent+Marker&family=Patrick+Hand&family=Poppins&family=Alegreya&family=B612&family=Muli&family=Varela&family=Vollkorn&family=IBM+Plex+Sans&family=Crimson+Text&family=Cairo&family=BioRhyme&family=Karla&family=Lora&family=Frank+Ruhl+Libre&family=Playfair+Display&family=Archivo&family=Spectral&family=Fjalla+One&family=Rubik&family=Source+Sans+Pro&family=Cardo&family=Cormorant&family=Rakkas&family=Concert+One&family=Yatra+One&family=Orvo&family=Lato&family=Abril+Fatface&family=PT+Serif&family=Old+Standard+TT&&family=Oswald&family=Arvo&family=IBM+Plex+Serif&family=IBM+Plex+Mono&family=Qahiri&family=Zen+Loop&family=Lexend&family=Asar&family=Hahmlet&family=Vibur&family=Josefin+Slab&family=Style+Script&family=Atkinson+Hyperlegible&family=Space+Grotesk&family=Nunito&family=Inconsolata&family=Yomogi&family=Alegreya+SC&family=Mulish&family=Hind+Siliguri&family=Georama&family=Andada+Pro&family=Recursive&family=Heebo&family=Libre+Franklin&family=Epilogue&family=Rhodium+Libre&family=Nunito+Sans&family=Qahiri&display=swap");
+
+@font-face {
+	font-family: Emoji;
+	src: url(emoji.ttf);
+}
+
 html {
 scroll-behavior: var(--scroll-style);
 }
@@ -9,12 +15,18 @@ scroll-behavior: var(--scroll-style);
 	}
 }
 
-button {border-radius: 124567890px; background: var(--accent-color); border: none; color: var(--text-color-alternate); padding: 10px 50px; font-family: var(--font); font-weight: bold; font-family: var(--font)}
+a.icon-button {display: flex; justify-content: center; align-items: center; text-transform: var(--text-case-filter);border-radius: 124567890px; background: var(--accent-color); border: none; color: var(--text-color-alternate); padding: 10px 50px; font-family: inherit; font-weight: bold; font-family: var(--font); fill: var(--text-color-alternate); text-transform: var(--text-case-filter); display: auto;}
 
-body {font-family: var(--font); background: var(--main-color); color: var(--text-color); text-transform: var(--text-case-filter); margin: var(--page-margin);}
+button.icon-button {
+	display: flex; justify-content: center; align-items: center; text-transform: var(--text-case-filter);
+}
+
+button {border-radius: 124567890px; background: var(--accent-color); border: none; color: var(--text-color-alternate); padding: 10px 50px; font-family: var(--font); font-weight: bold; font-family: var(--font); fill: var(--text-color-alternate); text-transform: var(--text-case-filter);}
+
+body {font-family: var(--font), Emoji, var(--font-type); background: var(--main-color); color: var(--text-color); text-transform: var(--text-case-filter); margin: var(--page-margin);}
 
 body * {
-	transition:all 0.3s ease !important;
+	transition:all 0.3s ease;
 }
 
 a {text-decoration: none; color: var(--accent-color);}
@@ -77,7 +89,7 @@ a {text-decoration: none; color: var(--accent-color);}
 		color: var(--text-color-alternate);
 	}
 
-ul.navbar #active {
+ul.navbar li a#active {
   	background-color: var(--accent-color);
 	color: var(--text-color-alternate);
 }
