--- a/style.css
+++ b/style.css
@@ -8,20 +8,8 @@
 		--page-margin: 0px 150px;
 		--text-case-filter: capitalize;
 		--scroll-style: smooth;
+		--font-type: sans-serif;
 	}
-@media (max-width: 600px) and (orientation:portrait) 
-{
-    :root {
-		--main-color: white;
-		--accent-color: rgb(0, 124, 249);
-		--font-color: #292D3E;
-		--font-color-alternate: #fff;	
-		--font: atkinson hyperlegible;	
-		--page-margin: 0px 150px;
-		--text-case-filter: capitalize;
-		--smoth-scroll: smooth;
-	}
-}
 
 	.article * {text-transform: none;}
 	
