--- a/api.css
+++ b/api.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Baloo+2&family=Baloo+Bhai+2&family=Baloo+Bhaina+2&family=Baloo+Chettan+2&family=Baloo+Da+2&family=Baloo+Paaji+2&family=Baloo+Tamma+2&family=Baloo+Tammudu+2&family=Baloo+Thambi+2&Work+Sans&family=Open+Sans&family=Montserrat&family=Noto+Sans&family=Neucha&family=Source+Code+Pro&family=Roboto+Mono&family=Amatic+SC&family=Roboto&family=Inter&family=Roboto+Slab&family=Roboto+Condensed&family=Raleway&family=Merriweather&family=Ubuntu&family=Ubuntu+Condensed&family=Ubuntu+Mono&family=Quicksand&family=Space+Mono&family=DM+Mono&family=DM+Sans&family=DM+Serif+Text&family=DM+Serif+Display&family=Work+Sans&family=Titillium+Web&family=Lobster&family=Comfortaa&family=Staatliches&family=Pacifico&family=Permanent+Marker&family=Patrick+Hand&family=Poppins&family=Alegreya&family=B612&family=Muli&family=Varela&family=Vollkorn&family=IBM+Plex+Sans&family=Crimson+Text&family=Cairo&family=BioRhyme&family=Karla&family=Lora&family=Frank+Ruhl+Libre&family=Playfair+Display&family=Archivo&family=Spectral&family=Fjalla+One&family=Rubik&family=Source+Sans+Pro&family=Cardo&family=Cormorant&family=Rakkas&family=Concert+One&family=Yatra+One&family=Orvo&family=Lato&family=Abril+Fatface&family=PT+Serif&family=Old+Standard+TT&&family=Oswald&family=Arvo&family=IBM+Plex+Serif&family=IBM+Plex+Mono&family=Qahiri&family=Zen+Loop&family=Lexend&family=Asar&family=Hahmlet&family=Vibur&family=Josefin+Slab&family=Style+Script&family=Atkinson+Hyperlegible&family=Space+Grotesk&family=Nunito&family=Inconsolata&family=Yomogi&family=Alegreya+SC&family=Mulish&family=Hind+Siliguri&family=Georama&family=Andada+Pro&family=Recursive&family=Heebo&family=Libre+Franklin&family=Epilogue&family=Rhodium+Libre&family=Nunito+Sans&family=Qahiri&display=swap");
-
-html {
+@media (hover: none) {
+	html {
 scroll-behavior: var(--scroll-style);
 }
 
@@ -10,57 +10,74 @@ scroll-behavior: var(--scroll-style);
 	}
 }
 
+	
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+table td, table th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+table tr:nth-child(even){background-color: var(--main-color);}
+
+table tr:first-of-type {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: var(--accent-color);
+  color: var(--text-color-alternate);
+  margin: 0px;	
+}
+	
 @font-face {
 	font-family: Emoji;
 	src: url(emoji.ttf)	
 }
+body {font-family: var(--font), Emoji, var(--font-type), sans-serif;}	
 
-
-a.icon-button {display: flex; justify-content: center; align-items: center; text-transform: var(--text-case-filter);border-radius: 124567890px; background: var(--accent-color); border: none; color: var(--text-color-alternate); padding: 10px 50px; font-family: inherit; font-weight: bold; font-family: var(--font); fill: var(--text-color-alternate); text-transform: var(--text-case-filter);}
+button.icon-button svg {height: 1rem;}
 
 button.icon-button {
 	display: flex; justify-content: center; align-items: center; text-transform: var(--text-case-filter);
 }
 
-button {border-radius: 124567890px; background: var(--accent-color); border: none; color: var(--text-color-alternate); padding: 10px 50px; font-family: var(--font); font-weight: bold; font-family: var(--font); fill: var(--text-color-alternate); text-transform: var(--text-case-filter);}
+button {border-radius: 124567890px; background: var(--accent-color); border: none; color: var(--text-color-alternate); padding: 10px 50px; font-family: var(--font); font-weight: bold; font-family: var(--font); fill: var(--text-color-alternate); text-transform: var(--text-case-filter); font-size: 16px;}
 
-body {font-family: var(--font), Emoji, var(--font-type), sans-serif; background: var(--main-color); color: var(--text-color); text-transform: var(--text-case-filter); margin: var(--page-margin);}
+body {background: var(--main-color); color: var(--text-color); text-transform: var(--text-case-filter);}
 
 body * {
 	transition:all 0.3s ease;
+	overflow-x: scroll;
+	-webkit-tap-highlight-color: transparent;
 }
 
 a {text-decoration: none; color: var(--accent-color);}
 
-	img.emoji {
-   		height: 1em;
-   		width: 1em;
-   		margin: 0 .05em 0 .1em;
-   		vertical-align: -0.1em;
-	}
-
 	ul.navbar {
   		list-style-type: none;
-  		margin: 0;
-  		padding: 0;
-  		overflow: hidden;
+  		overflow-x: hidden;
 		background: var(--main-color);
+		text-align: center;
+		display: grid;
+		margin: 0px;
+		text-align: center;
   	}
 	
-	ul.navbar.sticky {
-		position: -webkit-sticky;
-		position: sticky;
-		top: 0;
-		overflow:hidden;
-	}
-
-	ul.navbar.glow li a:hover {
-		box-shadow:0 0 5px var(--accent-color);
-	}
+ul.navbar * {
+	overflow-x: hidden;
+	display: inline-block;
+}
 
 	.navbar li {
   		float: left;
-		padding: 5px;
+		padding: 0px;
+		width: 100%;
+		display: flex;
+		justify-content: center;
+		margin: 0px;
 	}
 
 	.navbar li a {
@@ -72,21 +89,6 @@ a {text-decoration: none; color: var(--accent-color);}
   		border-radius: 12px;
 		cursor: pointer;
 		user-select: none;
-	}
-
-	.navbar li a:hover {
-  		background-color: var(--accent-color);
-		color: var(--text-color-alternate);
-	}
-
-	button.glow:hover {
-		box-shadow:0 0 5px var(--accent-color);	
-	}
-
-	ul.navbar.glow li a#active {
-		box-shadow:0 0 5px var(--accent-color);
-		background-color: var(--accent-color);
-		color: var(--text-color-alternate);
 	}
 
 ul.navbar li a#active {
@@ -164,4 +166,152 @@ ul.navbar li a#active {
 
 button.push:active {
 	transform: scale(0.8);
+}
+}
+/* Desktop */
+@media (hover: hover) {
+	html {
+scroll-behavior: var(--scroll-style);
+}
+
+@media screen and (prefers-reduced-motion: reduce) {
+	html {
+		scroll-behavior: auto;
+	}
+}
+
+	
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+table td, table th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+table tr:nth-child(even){background-color: var(--main-color);}
+
+table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: var(--accent-color);
+  color: var(--text-color-alternate);	
+}
+	
+body {font-family: var(--font), Emoji, var(--font-type), sans-serif;}	
+
+button.icon-button svg {height: 1rem;}
+
+button.icon-button {
+	display: flex; justify-content: center; align-items: center; text-transform: var(--text-case-filter);
+}
+
+button {border-radius: 124567890px; background: var(--accent-color); border: none; color: var(--text-color-alternate); padding: 10px 50px; font-family: var(--font); font-weight: bold; font-family: var(--font); fill: var(--text-color-alternate); text-transform: var(--text-case-filter); font-size: 16px;}
+
+body {background: var(--main-color); color: var(--text-color); text-transform: var(--text-case-filter); margin: var(--page-margin);}
+
+body * {
+	transition:all 0.3s ease;
+}
+
+a {text-decoration: none; color: var(--accent-color);}
+
+	img.emoji {
+   		height: 1em;
+   		width: 1em;
+   		margin: 0 .05em 0 .1em;
+   		vertical-align: -0.1em;
+	}
+
+	ul.navbar {
+  		list-style-type: none;
+  		margin: 0;
+  		padding: 0;
+  		overflow: hidden;
+		background: var(--main-color);
+  	}
+	
+	ul.navbar.sticky {
+		position: -webkit-sticky;
+		position: sticky;
+		top: 0;
+		overflow:hidden;
+	}
+
+	ul.navbar.glow li a:hover {
+		box-shadow:0 0 15px var(--accent-color);
+	}
+
+	.navbar li {
+  		float: left;
+		padding: 15px;
+		overflow-x: scroll;
+	}
+
+	.navbar li a {
+  		display: block;
+  		color: var(--text-color);
+  		text-align: center;
+  		padding: 14px 16px;
+  		text-decoration: none;
+  		border-radius: 12px;
+		cursor: pointer;
+		user-select: none;
+	}
+
+	.navbar li a:hover {
+  		background-color: var(--accent-color);
+		color: var(--text-color-alternate);
+	}
+
+	button.glow:hover {
+		box-shadow:0 0 15px var(--accent-color);
+	}
+
+	ul.navbar.glow li a#active {
+		box-shadow:0 0 15px var(--accent-color);
+		background-color: var(--accent-color);
+		color: var(--text-color-alternate);
+	}
+	
+	ul.navbar.push li a:active {
+		transform: scale(0.8)
+	}
+
+ul.navbar li a#active {
+  	background-color: var(--accent-color);
+	color: var(--text-color-alternate);
+}
+
+.shadowed {
+	box-shadow: 5px 10px 8px lightgrey; 
+}
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--main-color);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--accent-color);
+  border-radius: 9px;	
+}
+
+.button.sticky {
+	position: sticky;
+}
+
+@keyframes frgh1 {
+	to{transform: rotate(360deg)}
+}
+
+@keyframes frgh2 {
+	50% {opacity: 0}
+	to {opacity: 1}
+}
 }
