--- a/api.css
+++ b/api.css
@@ -1,4 +1,55 @@
 @import url("https://fonts.googleapis.com/css2?family=Baloo+2&family=Baloo+Bhai+2&family=Baloo+Bhaina+2&family=Baloo+Chettan+2&family=Baloo+Da+2&family=Baloo+Paaji+2&family=Baloo+Tamma+2&family=Baloo+Tammudu+2&family=Baloo+Thambi+2&Work+Sans&family=Open+Sans&family=Montserrat&family=Noto+Sans&family=Neucha&family=Source+Code+Pro&family=Roboto+Mono&family=Amatic+SC&family=Roboto&family=Inter&family=Roboto+Slab&family=Roboto+Condensed&family=Raleway&family=Merriweather&family=Ubuntu&family=Ubuntu+Condensed&family=Ubuntu+Mono&family=Quicksand&family=Space+Mono&family=DM+Mono&family=DM+Sans&family=DM+Serif+Text&family=DM+Serif+Display&family=Work+Sans&family=Titillium+Web&family=Lobster&family=Comfortaa&family=Staatliches&family=Pacifico&family=Permanent+Marker&family=Patrick+Hand&family=Poppins&family=Alegreya&family=B612&family=Muli&family=Varela&family=Vollkorn&family=IBM+Plex+Sans&family=Crimson+Text&family=Cairo&family=BioRhyme&family=Karla&family=Lora&family=Frank+Ruhl+Libre&family=Playfair+Display&family=Archivo&family=Spectral&family=Fjalla+One&family=Rubik&family=Source+Sans+Pro&family=Cardo&family=Cormorant&family=Rakkas&family=Concert+One&family=Yatra+One&family=Orvo&family=Lato&family=Abril+Fatface&family=PT+Serif&family=Old+Standard+TT&&family=Oswald&family=Arvo&family=IBM+Plex+Serif&family=IBM+Plex+Mono&family=Qahiri&family=Zen+Loop&family=Lexend&family=Asar&family=Hahmlet&family=Vibur&family=Josefin+Slab&family=Style+Script&family=Atkinson+Hyperlegible&family=Space+Grotesk&family=Nunito&family=Inconsolata&family=Yomogi&family=Alegreya+SC&family=Mulish&family=Hind+Siliguri&family=Georama&family=Andada+Pro&family=Recursive&family=Heebo&family=Libre+Franklin&family=Epilogue&family=Rhodium+Libre&family=Nunito+Sans&family=Qahiri&display=swap");
+@keyframes frgh1 {
+	to{transform: rotate(360deg)}
+}
+
+@keyframes frgh2 {
+	50% {opacity: 0}
+	to {opacity: 1}
+}
+
+.animation.spin {
+	animation: frgh1;
+}
+
+.animation.fadeback {
+	animation: frgh2;
+}
+
+.animation.regular {
+	animation-duration: 1s;
+}
+
+.animation.faster {
+	animation-duration: 0.25s;
+}
+.animation.fast {
+	animation-duration: 0.5s;
+}
+.animation.slow {
+	animation-duration: 1.5s;
+}
+
+.animation.slower {
+	animation-duration: 2s;
+}
+
+
+.animation.infinite {
+	animation-iteration-count: infinite;
+}
+
+.animation.once {
+	animation-iteration-count: 1;
+}
+
+.navbar.push li a:active {
+	transform: scale(0.8);
+}
+
+button.push:active {
+	transform: scale(0.8);
+}
 @media (hover: none) {
 	html {
 scroll-behavior: var(--scroll-style);
@@ -53,6 +104,8 @@ body * {
 	overflow-x: scroll;
 	-webkit-tap-highlight-color: transparent;
 }
+	
+	button, button * {overflow-x: hidden;}	
 
 a {text-decoration: none; color: var(--accent-color);}
 
@@ -114,58 +167,6 @@ ul.navbar li a#active {
 
 .button.sticky {
 	position: sticky;
-}
-
-@keyframes frgh1 {
-	to{transform: rotate(360deg)}
-}
-
-@keyframes frgh2 {
-	50% {opacity: 0}
-	to {opacity: 1}
-}
-
-.animation.spin {
-	animation: frgh1;
-}
-
-.animation.fadeback {
-	animation: frgh2;
-}
-
-.animation.regular {
-	animation-duration: 1s;
-}
-
-.animation.faster {
-	animation-duration: 0.25s;
-}
-.animation.fast {
-	animation-duration: 0.5s;
-}
-.animation.slow {
-	animation-duration: 1.5s;
-}
-
-.animation.slower {
-	animation-duration: 2s;
-}
-
-
-.animation.infinite {
-	animation-iteration-count: infinite;
-}
-
-.animation.once {
-	animation-iteration-count: 1;
-}
-
-.navbar.push li a:active {
-	transform: scale(0.8);
-}
-
-button.push:active {
-	transform: scale(0.8);
 }
 }
 /* Desktop */
