--- a/api.css
+++ b/api.css
@@ -1,8 +1,51 @@
 @import url("https://fonts.googleapis.com/css2?family=Baloo+2&family=Baloo+Bhai+2&family=Baloo+Bhaina+2&family=Baloo+Chettan+2&family=Baloo+Da+2&family=Baloo+Paaji+2&family=Baloo+Tamma+2&family=Baloo+Tammudu+2&family=Baloo+Thambi+2&Work+Sans&family=Open+Sans&family=Montserrat&family=Noto+Sans&family=Neucha&family=Source+Code+Pro&family=Roboto+Mono&family=Amatic+SC&family=Roboto&family=Inter&family=Roboto+Slab&family=Roboto+Condensed&family=Raleway&family=Merriweather&family=Ubuntu&family=Ubuntu+Condensed&family=Ubuntu+Mono&family=Quicksand&family=Space+Mono&family=DM+Mono&family=DM+Sans&family=DM+Serif+Text&family=DM+Serif+Display&family=Work+Sans&family=Titillium+Web&family=Lobster&family=Comfortaa&family=Staatliches&family=Pacifico&family=Permanent+Marker&family=Patrick+Hand&family=Poppins&family=Alegreya&family=B612&family=Muli&family=Varela&family=Vollkorn&family=IBM+Plex+Sans&family=Crimson+Text&family=Cairo&family=BioRhyme&family=Karla&family=Lora&family=Frank+Ruhl+Libre&family=Playfair+Display&family=Archivo&family=Spectral&family=Fjalla+One&family=Rubik&family=Source+Sans+Pro&family=Cardo&family=Cormorant&family=Rakkas&family=Concert+One&family=Yatra+One&family=Orvo&family=Lato&family=Abril+Fatface&family=PT+Serif&family=Old+Standard+TT&&family=Oswald&family=Arvo&family=IBM+Plex+Serif&family=IBM+Plex+Mono&family=Qahiri&family=Zen+Loop&family=Lexend&family=Asar&family=Hahmlet&family=Vibur&family=Josefin+Slab&family=Style+Script&family=Atkinson+Hyperlegible&family=Space+Grotesk&family=Nunito&family=Inconsolata&family=Yomogi&family=Alegreya+SC&family=Mulish&family=Hind+Siliguri&family=Georama&family=Andada+Pro&family=Recursive&family=Heebo&family=Libre+Franklin&family=Epilogue&family=Rhodium+Libre&family=Nunito+Sans&family=Qahiri&display=swap");
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+table td, table th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+table tr:nth-child(even){background-color: var(--main-color);}
+
+table tr:first-of-type {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: var(--accent-color);
+  color: var(--text-color-alternate);
+  margin: 0px;	
+}
+
+
+	
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+table td, table th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+table tr:nth-child(even){background-color: var(--main-color);}
+
+table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: var(--accent-color);
+  color: var(--text-color-alternate);	
+}
+
 @keyframes frgh1 {
 	to{transform: rotate(360deg)}
 }
-
 	
 @font-face {
 	font-family: Emoji;
@@ -57,49 +100,32 @@ button.push:active {
 	transform: scale(0.8);
 }
 
-
-body {font-family: var(--font), Emoji, var(--font-type), sans-serif;}
-
 @media (hover: none) {
 	html {
 scroll-behavior: var(--scroll-style);
 }
 
+	.navbar li {width: 100%;}
+	
+	.navbar li a {width: 100%;}	
+	
 @media screen and (prefers-reduced-motion: reduce) {
 	html {
 		scroll-behavior: auto;
 	}
 }
-
 	
-table {
-  border-collapse: collapse;
-  width: 100%;
-}
+body {font-family: var(--font), Emoji, var(--font-type), sans-serif; overflow-x: hidden;}
 
-table td, table th {
-  border: 1px solid #ddd;
-  padding: 8px;
-}
-
-table tr:nth-child(even){background-color: var(--main-color);}
-
-table tr:first-of-type {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: var(--accent-color);
-  color: var(--text-color-alternate);
-  margin: 0px;	
-}
-
-button.icon-button svg {height: 1rem;}
+	button {width: 100%}
+	
+button.icon-button svg {height: 1rem}
 
 button.icon-button {
-	display: flex; justify-content: center; align-items: center; text-transform: var(--text-case-filter);
+	text-transform: var(--text-case-filter);
 }
 
-button {border-radius: 124567890px; background: var(--accent-color); border: none; color: var(--text-color-alternate); padding: 10px 50px; font-family: var(--font); font-weight: bold; font-family: var(--font); fill: var(--text-color-alternate); text-transform: var(--text-case-filter); font-size: 16px;}
+button {border-radius: 124567890px; background: var(--accent-color); border: none; color: var(--text-color-alternate); padding: 10px 50px; font-family: var(--font); font-weight: bold; font-family: var(--font); fill: var(--text-color-alternate); text-transform: var(--text-case-filter);}
 
 body {background: var(--main-color); color: var(--text-color); text-transform: var(--text-case-filter);}
 
@@ -118,21 +144,26 @@ a {text-decoration: none; color: var(--accent-color);}
   		overflow-x: hidden;
 		background: var(--main-color);
 		text-align: center;
-		display: grid;
+		display: inline-grid;
 		margin: 0px;
 		text-align: center;
+		justify-content: center;
+		width: 100vw;
+		padding-inline-start: 0px;
   	}
 	
 ul.navbar * {
 	overflow-x: hidden;
 	display: inline-block;
+	list-style-type: unset;
+	
 }
 
 	.navbar li {
   		float: left;
 		padding: 0px;
 		width: 100%;
-		display: flex;
+		display: inline-flex;
 		justify-content: center;
 		margin: 0px;
 	}
@@ -146,10 +177,11 @@ ul.navbar * {
   		border-radius: 12px;
 		cursor: pointer;
 		user-select: none;
+		width: 100%;
 	}
 
 ul.navbar li a#active {
-  	background-color: var(--accent-color);
+  	background: var(--accent-color);
 	color: var(--text-color-alternate);
 }
 
@@ -184,27 +216,6 @@ scroll-behavior: var(--scroll-style);
 		scroll-behavior: auto;
 	}
 }
-
-	
-table {
-  border-collapse: collapse;
-  width: 100%;
-}
-
-table td, table th {
-  border: 1px solid #ddd;
-  padding: 8px;
-}
-
-table tr:nth-child(even){background-color: var(--main-color);}
-
-table th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: var(--accent-color);
-  color: var(--text-color-alternate);	
-}
 	
 body {font-family: var(--font), Emoji, var(--font-type), sans-serif;}	
 
@@ -214,7 +225,7 @@ button.icon-button {
 	display: flex; justify-content: center; align-items: center; text-transform: var(--text-case-filter);
 }
 
-button {border-radius: 124567890px; background: var(--accent-color); border: none; color: var(--text-color-alternate); padding: 10px 50px; font-family: var(--font); font-weight: bold; font-family: var(--font); fill: var(--text-color-alternate); text-transform: var(--text-case-filter); font-size: 16px;}
+button {border-radius: 124567890px; background: var(--accent-color); border: none; color: var(--text-color-alternate); padding: 10px 50px; font-family: var(--font); font-weight: bold; font-family: var(--font); fill: var(--text-color-alternate); text-transform: var(--text-case-filter);}
 
 body {background: var(--main-color); color: var(--text-color); text-transform: var(--text-case-filter); margin: var(--page-margin);}
 
@@ -268,7 +279,7 @@ a {text-decoration: none; color: var(--accent-color);}
 	}
 
 	.navbar li a:hover {
-  		background-color: var(--accent-color);
+  		background: var(--accent-color);
 		color: var(--text-color-alternate);
 	}
 
@@ -309,14 +320,5 @@ ul.navbar li a#active {
 
 .button.sticky {
 	position: sticky;
-}
-
-@keyframes frgh1 {
-	to{transform: rotate(360deg)}
-}
-
-@keyframes frgh2 {
-	50% {opacity: 0}
-	to {opacity: 1}
 }
 }
