--- a/emoji.css
+++ b/emoji.css
@@ -1,4 +1,1 @@
-@font-face {
-  src: url(emoji.ttf);
-  font-family: Emoji;
-} 
+@import url(https://fonts.googleapis.com/css2?family=Noto+Color+Emoji);
